@@ -1568,7 +1568,7 @@ function getFileSearchResult ($terms)
 	$byFilename = getSearchResultByField
 	(
 		'File',
-		array ('id', 'name', 'comment'),
+		array ('id', 'name', 'comment', 'type', 'size'),
 		'name',
 		$terms,
 		'name'
@@ -1576,7 +1576,7 @@ function getFileSearchResult ($terms)
 	$byComment = getSearchResultByField
 	(
 		'File',
-		array ('id', 'name', 'comment'),
+		array ('id', 'name', 'comment', 'type', 'size'),
 		'comment',
 		$terms,
 		'name'
