@@ -3351,12 +3351,11 @@ function renderSearchResults ()
 				case 'file':
 					startPortlet ("<a href='${root}?page=files'>Files</a>");
 					echo '<table border=0 cellpadding=5 cellspacing=0 align=center class=cooltable>';
-					echo '<tr><th>Name</th><th>Comment</th></tr>';
 					foreach ($what as $item)
 					{
-						echo "<tr class=row_${order}><td class=tdleft><a href='${root}?page=file&file_id=${item['id']}'>";
-						echo $item['name'];
-						echo "</a></td><td class=tdleft>${item['comment']}</td></tr>";
+						echo "<tr class=row_${order}><td class=tdleft>";
+						renderFileCell ($item);
+						echo "</td></tr>";
 						$order = $nextorder[$order];
 					}
 					echo '</table>';
@@ -5924,7 +5923,7 @@ function printOpFormIntro ($opname, $extra = array(), $upload = FALSE)
 	if (isset ($page[$pageno]['bypass']) and isset ($_REQUEST[$page[$pageno]['bypass']]))
 		$extra[$page[$pageno]['bypass']] = $_REQUEST[$page[$pageno]['bypass']];
 	foreach ($extra as $inputname => $inputvalue)
-		echo "<input type=hidden name=${inputname} value=${inputvalue}>\n";
+		echo "<input type=hidden name=${inputname} value='${inputvalue}'>\n";
 }
 
 // This is a dual-purpose formating function:
